--- a/src/components/sections/styles/CryptoSection.css
+++ b/src/components/sections/styles/CryptoSection.css
@@ -33,7 +33,8 @@
 }
 
 .crypto-card {
-    height: 100%;
+    height: 165px !important;
+    width: 195px !important;
     display: flex;
     flex-direction: column;
     justify-content: center;
