--- a/src/components/sections/styles/AccionesARGYSection.module.css
+++ b/src/components/sections/styles/AccionesARGYSection.module.css
@@ -1,8 +1,8 @@
 .sectionPaper {
-    padding: 24px;
+    padding: 16px;
     background-color: rgba(0, 255, 0, 0.03);
     border: 1px solid rgba(57, 255, 20, 0.35);
-    border-radius: 36px;
+    border-radius: 24px;
     backdrop-filter: blur(3px);
     margin-bottom: 24px;
 }
@@ -10,6 +10,7 @@
 @media (min-width: 900px) {
     .sectionPaper {
         padding: 24px;
+        border-radius: 36px;
     }
 }
 
@@ -37,6 +38,13 @@
     color: #39ff14 !important;
     text-transform: uppercase;
     letter-spacing: 1px;
+    font-size: 1.5rem !important;
+}
+
+@media (min-width: 600px) {
+    .headerTitle {
+        font-size: 2rem !important;
+    }
 }
 
 .refreshButton {
