--- a/src/components/sections/styles/DolarSection.module.css
+++ b/src/components/sections/styles/DolarSection.module.css
@@ -1,14 +1,15 @@
 .sectionPaper {
-    padding: 20px;
+    padding: 16px;
     background-color: rgba(0, 255, 0, 0.03);
     border: 1px solid rgba(57, 255, 20, 0.35);
-    border-radius: 36px;
+    border-radius: 24px;
     backdrop-filter: blur(3px);
 }
 
-@media (min-width: 900px) {
+@media (min-width: 600px) {
     .sectionPaper {
         padding: 24px;
+        border-radius: 36px;
     }
 }
 
@@ -36,6 +37,13 @@
 .headerTitle {
     font-weight: 800 !important;
     color: #39ff14 !important;
+    font-size: 1.5rem !important;
+}
+
+@media (min-width: 600px) {
+    .headerTitle {
+        font-size: 2rem !important;
+    }
 }
 
 .chartButton {
