--- a/src/app/admin/styles/Admin.module.css
+++ b/src/app/admin/styles/Admin.module.css
@@ -6,6 +6,15 @@
     padding-right: 16px;
 }
 
+@media (min-width: 600px) {
+    .container {
+        padding-left: 24px;
+        padding-right: 24px;
+        padding-top: 40px;
+        padding-bottom: 40px;
+    }
+}
+
 @media (min-width: 900px) {
     .container {
         padding-left: 32px;
