--- a/src/app/movimientos/styles/Movimientos.module.css
+++ b/src/app/movimientos/styles/Movimientos.module.css
@@ -1,3 +1,30 @@
 .container {
-    padding: 24px;
+    min-height: calc(100vh - 96px);
+    display: flex;
+    flex-direction: column;
+    padding: 16px;
+}
+
+@media (min-width: 600px) {
+    .container {
+        padding: 24px;
+    }
+}
+
+@media (min-width: 900px) {
+    .container {
+        padding: 32px;
+    }
+}
+
+.title {
+    font-weight: 800;
+    margin-bottom: 24px;
+    font-size: 1.75rem;
+}
+
+@media (min-width: 600px) {
+    .title {
+        font-size: 2rem;
+    }
 }
