--- a/src/app/noticias/styles/Noticias.module.css
+++ b/src/app/noticias/styles/Noticias.module.css
@@ -1,5 +1,17 @@
 .main {
-    padding: 24px;
+    padding: 16px;
+}
+
+@media (min-width: 600px) {
+    .main {
+        padding: 24px;
+    }
+}
+
+@media (min-width: 900px) {
+    .main {
+        padding: 32px;
+    }
 }
 
 .header {
