--- a/src/app/reportes/styles/Reportes.module.css
+++ b/src/app/reportes/styles/Reportes.module.css
@@ -1,5 +1,17 @@
 .container {
-    padding: 24px;
+    padding: 16px;
+}
+
+@media (min-width: 600px) {
+    .container {
+        padding: 24px;
+    }
+}
+
+@media (min-width: 900px) {
+    .container {
+        padding: 32px;
+    }
 }
 
 .maxWidthContainer {
