--- a/src/app/styles/Home.module.css
+++ b/src/app/styles/Home.module.css
@@ -18,6 +18,19 @@
 .title {
     font-weight: 800 !important;
     margin-bottom: 8px !important;
+    font-size: 2.5rem !important;
+}
+
+@media (min-width: 600px) {
+    .title {
+        font-size: 3.5rem !important;
+    }
+}
+
+@media (min-width: 900px) {
+    .title {
+        font-size: 4rem !important;
+    }
 }
 
 .brandSpan {
