--- a/src/app/activos/styles/Activos.module.css
+++ b/src/app/activos/styles/Activos.module.css
@@ -85,7 +85,9 @@
 }
 
 .filterControl {
-    min-width: 200px;
+    width: 250px !important;
+    min-width: 250px !important;
+    flex-shrink: 0 !important;
 }
 
 .filterSelect {
