--- a/src/components/sections/styles/AccionesARGYSection.module.css
+++ b/src/components/sections/styles/AccionesARGYSection.module.css
@@ -86,6 +86,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    text-align: center;
     background-color: rgba(0, 255, 0, 0.05) !important;
     border: 1px solid rgba(57, 255, 20, 0.25) !important;
     border-radius: 24px !important;
