--- a/src/components/sections/styles/CedearsSection.module.css
+++ b/src/components/sections/styles/CedearsSection.module.css
@@ -66,12 +66,13 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    text-align: center;
     background-color: rgba(0, 255, 0, 0.05) !important;
     border: 1px solid rgba(57, 255, 20, 0.25) !important;
-    border-radius: 24px !important;
+    border-radius: 36px !important;
     overflow: hidden;
     backdrop-filter: blur(3px);
-    box-shadow: 0 0 12px rgba(57, 255, 20, 0.15) !important;
+    box-shadow: 0 0 12px rgba(57, 255, 20, 0.25) !important;
     transition: all 0.25s ease !important;
 }
 
