--- a/src/components/cards/styles/CryptoCard.module.css
+++ b/src/components/cards/styles/CryptoCard.module.css
@@ -34,6 +34,8 @@
 
 .cardText {
     color: #fff !important;
+    font-size: 0.9rem !important;
+    margin-bottom: 6px !important;
 }
 
 .cardChange {
