--- a/src/components/ui/styles/PageHeader.module.css
+++ b/src/components/ui/styles/PageHeader.module.css
@@ -6,6 +6,31 @@
     justify-content: center;
 }
 
+@media (min-width: 768px) {
+    .headerContainer {
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: flex-end;
+    }
+}
+
+.content {
+    flex: 1;
+}
+
+.actions {
+    margin-top: 1rem;
+    display: flex;
+    gap: 1rem;
+}
+
+@media (min-width: 768px) {
+    .actions {
+        margin-top: 0;
+        margin-left: 2rem;
+    }
+}
+
 .title {
     font-family: 'Outfit', sans-serif;
     font-size: 3.5rem;
