--- a/src/app/styles/page.module.css
+++ b/src/app/styles/page.module.css
@@ -93,7 +93,6 @@ a.secondary {
   border-color: var(--button-secondary-border);
 }
 
-/* Enable hover only on non-touch devices */
 @media (hover: hover) and (pointer: fine) {
   a.primary:hover {
     background: var(--button-primary-hover);
@@ -148,8 +147,17 @@ a.secondary {
   background-size: 300% 300%;
   animation: moveGradient 18s ease infinite;
 }
+
 @keyframes moveGradient {
-  0% { background-position: 0% 50% }
-  50% { background-position: 100% 50% }
-  100% { background-position: 0% 50% }
+  0% {
+    background-position: 0% 50%
+  }
+
+  50% {
+    background-position: 100% 50%
+  }
+
+  100% {
+    background-position: 0% 50%
+  }
 }
